--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,19 @@
 	"name": "Chrome humans.txt Viewer",
 	"version": "0.1",
 	"description": "Viewer for the humans.txt file. More info on humanstxt.org.",
+	"background_page": "background.html",
 	"icons": {
-		"16": "humans-txt.png",
-		"48": "humans-txt.png",
-		"128": "humans-txt.png"
+		"16": "48.png",
+		"48": "48.png",
+		"128": "128.png"
 	},
 	"page_action": {
-		"default_icon": "icons/humans-txt.png",
+		"default_icon": "128.png",
 		"default_title": "Discover who built this website",
 		"default_popup": "viewer.html"
 	},
 	"permissions": [
+	    "tabs",
 		"http://*/**",
 		"https://*/**"
 	]
